# el-capturo

./: .gitignore  README.md  capture.py  clean.sh  config_manager.py  constants.py  logging_config.yaml  market_info.py  poly_websocket_capture.py  pyproject.toml  utils.py
binance_capture/: websocket_capture.py
hyperliquid_capture/: websocket_capture.py
polymarket/: derive_creds.py  market_info.py  websocket_capture.py
polymarket/events/: parsers.py  types.py
polymarket/orderbook/: orderbook.py
writers/: parquet_writer.py
