[project]
name = "el-capturo"
version = "0.1.0"
description = "Capture Polymarket and Binance data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-connector>=3.12.0",
    "loguru>=0.7.3",
    "polars>=1.31.0",
    "py-clob-client>=0.23.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
